--- a/3DSS for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
@@ -2,6 +2,7 @@
 devo                                                = scope
 side												= scope
 romeo4												= scope
+gee36												= scope
 
 ;--------------------------------------------------------------------------------------
 [devo]:addon
@@ -44,4 +45,18 @@ inv_grid_width     = 1
 inv_grid_height    = 1
 inv_grid_x         = 2
 inv_grid_y         = 0
+repair_type                                         = scope	
+;--------------------------------------------------------------------------------------
+[gee36]:addon
+visual				                                = dynamics\weapons\wpn_addon_world_models\wpn_case_weapon_small_world.ogf
+cost                		                        = 5230
+inv_name        		                            = st_addon_scope_gee36
+inv_name_short  		                            = st_addon_scope_gee36
+description    			                            = st_addon_scope_gee36_descr
+inv_weight        		                            = 0.270
+icons_texture                                       = ui\ui_icon_athi_scopes
+inv_grid_width     = 2
+inv_grid_height    = 1
+inv_grid_x         = 0
+inv_grid_y         = 2
 repair_type                                         = scope	
