--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
@@ -138,6 +138,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.00415, -0.003711, 0	
 ;==============================================================================	
 ![wpn_raptr]
+>scopes					= gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
@@ -171,6 +172,29 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_pos_16x9          = -0.050631, 0.003241, -0.093551
         aim_hud_offset_rot               = 0.01066, 0.003206, 0
         aim_hud_offset_rot_16x9          = 0.01066, 0.003206, 0
+		
+[wpn_raptr_gee36]:wpn_raptr
+
+1icon_layer				= gee36
+1icon_layer_x			= 90
+1icon_layer_y			= -3
+
+inv_weight                                         = 3.6
+scope_status                                       = 1
+scope_zoom_factor                                  = 40
+zoom_rotate_time                                   = 0.25
+scope_dynamic_zoom                                 = off
+
+use_alt_aim_hud                   = true
+
+hud                                      = wpn_raptr_gee36_hud
+
+[wpn_raptr_gee36_hud]:wpn_raptr_hud
+item_visual                              = dynamics\weapons\wpn_raptr\wpn_raptr_gee36_hud.ogf	
+        aim_hud_offset_pos               = -0.050981, 0.002844, -0.105853
+        aim_hud_offset_pos_16x9          = -0.050981, 0.002844, -0.105853
+        aim_hud_offset_rot               = 0.010763, 0.002875, 0
+        aim_hud_offset_rot_16x9          = 0.010763, 0.002875, 0			
 ;==============================================================================	
 ![wpn_p90gamma]
 lewd_lens_hide_enabled       = true
@@ -286,6 +310,7 @@ item_visual                		= dynamics\weapons\wpn_rpg7\wpn_rpg7_pgo_hud.ogf
         aim_hud_offset_rot_16x9          = 0.038532, 0.040147, 0
 ;==============================================================================
 ![wpn_kriss_vector]
+>scopes					= gee36
 lewd_lens_hide_enabled       = true
 lewd_lens_hide_bone          = sight
 lewd_lens_hide_delays        = 0.1,0
@@ -297,8 +322,35 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_kriss_vector_acog_hud]
         aim_hud_offset_pos               = -0.077196, 0.02647, -0.104167
         aim_hud_offset_pos_16x9          = -0.077196, 0.02647, -0.104167
-        aim_hud_offset_rot               = 0.036268, -0.024538, -0.01
+        aim_hud_offset_rot               = 0.036268, -0.024538, -0.01-0.01
         aim_hud_offset_rot_16x9          = 0.036268, -0.024538, -0.01
+		
+[wpn_kriss_vector_gee36]:wpn_kriss_vector
+
+1icon_layer				= gee36
+1icon_layer_x			= 73
+1icon_layer_y			= -15
+
+inv_weight                                         = 3.6
+scope_status                                       = 1
+scope_zoom_factor                                  = 40
+zoom_rotate_time                                   = 0.25
+scope_dynamic_zoom                                 = off
+
+use_alt_aim_hud                   = true
+
+hud                                      = wpn_kriss_vector_gee36_hud
+
+[wpn_kriss_vector_gee36_hud]:wpn_kriss_vector_hud
+item_visual                              = dynamics\weapons\wpn_kriss_vector\wpn_kriss_vector_gee36_hud.ogf	
+        aim_hud_offset_alt_pos           = -0.077495, 0.003919, -0.096878
+        aim_hud_offset_alt_pos_16x9      = -0.077495, 0.003919, -0.096878
+        aim_hud_offset_alt_rot           = 0.027174, -0.020462, -0.010025
+        aim_hud_offset_alt_rot_16x9      = 0.027174, -0.020462, -0.010025
+        aim_hud_offset_pos               = -0.076959, 0.021755, -0.096878
+        aim_hud_offset_pos_16x9          = -0.076959, 0.021755, -0.096878
+        aim_hud_offset_rot               = 0.03048, -0.024743, -0.01
+        aim_hud_offset_rot_16x9          = 0.03048, -0.024743, -0.01		
 ;==============================================================================	
 ![wpn_mp9]
 lewd_lens_hide_enabled       = true
