--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_smgs_shotguns_pistols.ltx
@@ -276,7 +276,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.040586, 0.021485, 0.013292
 ;==============================================================================	
 ![wpn_sr2_m1]
-scopes                                   = kp_sr2, ac10632, eot, c-more, 0kp2, d0cter, point_aimpro, aim_low, e0t2, rmr, deltapoint, compm4s, rakurs, kemper, aimpoint, ekp8_18, mepro
+<scopes                                   = pn23, leupold
 ;==============================================================================	
 ![wpn_vityaz]
 lewd_lens_hide_enabled       = true
@@ -322,7 +322,7 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_kriss_vector_acog_hud]
         aim_hud_offset_pos               = -0.077196, 0.02647, -0.104167
         aim_hud_offset_pos_16x9          = -0.077196, 0.02647, -0.104167
-        aim_hud_offset_rot               = 0.036268, -0.024538, -0.01-0.01
+        aim_hud_offset_rot               = 0.036268, -0.024538, -0.01
         aim_hud_offset_rot_16x9          = 0.036268, -0.024538, -0.01
 		
 [wpn_kriss_vector_gee36]:wpn_kriss_vector
