AK-105 kits BaS22 sounds dependency fix

--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzzzzzz_ak105_phant.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzzzzzz_ak105_phant.ltx
@@ -62,19 +62,24 @@ snd_draw                = weapons\ak12custom\draw
 snd_holster             = weapons\ak12custom\hide
 
 snd_empty               = weapons\ak12custom\ak12_empty
+snd_reload              = weapons\aksu_prince\aksu_tact_reload
+snd_reload_empty        = weapons\aksu_prince\aksu_tact_reload_empty
+snd_reload_misfire      = weapons\aksu_prince\aksu_tact_misfire
+snd_empty               = weapons\ak105_sp\trigger_hammer
 
-snd_reload              = weapons\ak74u_tac_young_prince\aksu_tac_reload
-snd_reload_empty        = weapons\ak74u_tac_young_prince\aksu_tac_reload_empty
-snd_reload_misfire      = weapons\ak74u_tac_young_prince\aksu_tac_unjam
+;snd_silncer_shot        = weapons\aksu_prince\aksu_shot_sil_1
+;snd_silncer_shot1       = weapons\aksu_prince\aksu_shot_sil_2
+;snd_silncer_shot2       = weapons\aksu_prince\aksu_shot_sil_3
+;snd_silncer_shot3       = weapons\aksu_prince\aksu_shot_sil_4
+;snd_silncer_shot4       = weapons\aksu_prince\aksu_shot_sil_5
 
-snd_shoot				= weapons\m4_young_prince\m4_shoot1
-snd_shoot1				= weapons\m4_young_prince\m4_shoot2
-snd_shoot2				= weapons\m4_young_prince\m4_shoot3
-snd_shoot3				= weapons\m4_young_prince\m4_shoot4
+;snd_shoot                = weapons\aksu_prince\aksu_shot_1
+;snd_shoot1               = weapons\aksu_prince\aksu_shot_2
+;snd_shoot2               = weapons\aksu_prince\aksu_shot_3
+;snd_shoot3               = weapons\aksu_prince\aksu_shot_4
+;snd_shoot4               = weapons\aksu_prince\aksu_shot_5
 
-snd_silncer_shot		                 = weapons\m4a1_ras\m4a1_sil-1
-
-snd_switch_mode                          = weapons\generic\switch_mode
+;snd_switch_mode			= weapons\generic\switch_mode
 ;-----------------------------------------------------SWAMP_HUD-----------------------------------------------------------------------------
 ![wpn_ak105_swamp_hud]
 
@@ -183,20 +188,24 @@ snd_draw                = weapons\ak12custom\draw
 snd_holster             = weapons\ak12custom\hide
 
 snd_empty               = weapons\ak12custom\ak12_empty
+snd_reload              = weapons\aksu_prince\aksu_tact_reload
+snd_reload_empty        = weapons\aksu_prince\aksu_tact_reload_empty
+snd_reload_misfire      = weapons\aksu_prince\aksu_tact_misfire
+snd_empty               = weapons\ak105_sp\trigger_hammer
 
-snd_reload              = weapons\ak74u_tac_young_prince\aksu_tac_reload
-snd_reload_empty        = weapons\ak74u_tac_young_prince\aksu_tac_reload_empty
-snd_reload_misfire      = weapons\ak74u_tac_young_prince\aksu_tac_unjam
+;snd_silncer_shot        = weapons\aksu_prince\aksu_shot_sil_1
+;snd_silncer_shot1       = weapons\aksu_prince\aksu_shot_sil_2
+;snd_silncer_shot2       = weapons\aksu_prince\aksu_shot_sil_3
+;snd_silncer_shot3       = weapons\aksu_prince\aksu_shot_sil_4
+;snd_silncer_shot4       = weapons\aksu_prince\aksu_shot_sil_5
 
-snd_shoot                                = weapons\akm_young_prince\akm_shot_dtk_1
-snd_shoot1                               = weapons\akm_young_prince\akm_shot_dtk_2
-snd_shoot2                               = weapons\akm_young_prince\akm_shot_dtk_3
+;snd_shoot                = weapons\aksu_prince\aksu_shot_1
+;snd_shoot1               = weapons\aksu_prince\aksu_shot_2
+;snd_shoot2               = weapons\aksu_prince\aksu_shot_3
+;snd_shoot3               = weapons\aksu_prince\aksu_shot_4
+;snd_shoot4               = weapons\aksu_prince\aksu_shot_5
 
-snd_silncer_shot        = weapons\akm_young_prince\akm_shot_sil_1
-snd_silncer_shot1       = weapons\akm_young_prince\akm_shot_sil_2
-snd_silncer_shot2       = weapons\akm_young_prince\akm_shot_sil_3
-
-snd_switch_mode                          = weapons\generic\switch_mode
+;snd_switch_mode			= weapons\generic\switch_mode
 ;-----------------------------------------------------shakal_HUD-----------------------------------------------------------------------------
 ![wpn_ak105_shakal_hud]
 ;------
