Scope param addition for new Meowie scopes

--- a/3DSS for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -80,7 +80,7 @@
 	ms_count = 2
 	ms_colors = scope_black, scope_red
 	magnification = 4	
-	
+
 ![pritseldob] --PS02 RMR
 	3ds_reticle_size = 4
 	3ds_shadow_project = 2.25
@@ -134,7 +134,11 @@
 	3ds_shadow_project = 3.7
 	magnification = 4		
 ;----------------------------------PICATINNY/WEST SCOPES---------------------------------
-
+![monstrum]
+	3ds_reticle_size = 4.5
+	3ds_shadow_project = 3.8	
+	magnification = 2
+	
 ![acog]
 	3ds_reticle_size = 8
 	3ds_shadow_project = 2.15
@@ -147,6 +151,11 @@
 	3ds_type = 3
 	magnification = 2.8	
 
+![trihawk] 
+	3ds_reticle_size = 4.5
+	3ds_shadow_project = 3.8	
+	magnification = 3
+	
 ![gee36]
 	3ds_reticle_size = 4.5
 	3ds_shadow_project = 3.8	
@@ -182,7 +191,7 @@
 
 ![hamr]
 	3ds_reticle_size = 12
-	3ds_shadow_project = 3.8
+	3ds_shadow_project = 2.1
 	magnification = 4
 	
 ![specter] --Dynamic
@@ -203,6 +212,20 @@
 	ms_colors = scope_black, scope_red	
 	magnification = 4	
 
+![tac30]
+	3ds_reticle_size = 6.7
+	3ds_shadow_project = 2.22
+	magnification = 4	
+
+![p4x32]                                        		
+	3ds_reticle_size = 7
+	3ds_shadow_project = 3.7
+	magnification = 4	                                       		
+![po4x34]
+	3ds_reticle_size = 7
+	3ds_shadow_project = 3.7
+	magnification = 4	
+	
 ![uh1_magd]
 	3ds_reticle_size = 6.5
 	3ds_shadow_project = 2.4
@@ -225,6 +248,15 @@
 	3ds_reticle_size = 9
 	3ds_shadow_project = 3.9
 	3ds_ffp_min_zoom = 32	
+	magnification = 6
+	
+![ps320] --Dynamic
+	3ds_reticle_size = 9
+	3ds_shadow_project = 3.9
+	3ds_ffp_min_zoom = 40	
+	3ds_type = 4
+	ms_count = 2
+	ms_colors = scope_black, scope_red
 	magnification = 6
 	
 ![leupold] --Dynamic
@@ -250,6 +282,11 @@
 	3ds_shadow_project = 4.1
 	3ds_ffp_min_zoom = 21
 	magnification = 8
+
+![ado]	--Dynamic
+	3ds_reticle_size = 8
+	3ds_shadow_project = 4.1
+	magnification = 9
 	
 ![cortex] --Dynamic
 	3ds_reticle_size = 6.8
@@ -271,6 +308,7 @@
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
 	magnification = 24
+ 
 	
 ![sup]
 inv_name			                                = st_addon_scope_sup_new
@@ -279,11 +317,4 @@ description			                                = st_addon_scope_sup_new_descr
 ;=======================Integrated======================================
 --MOVED TO WEAPON SECTIONS
 
-;===============sights to setup====================
-monstrum                                     		
-trihawk                                 			
-p4x32                                        		
-ps320                                        		
-po4x34                                              
-tac30                                        		
-ado                                          		
+;===============sights to setup====================                               			                                                                                      		                                         		
