--- a/3DSS for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -136,7 +136,7 @@
 ;----------------------------------PICATINNY/WEST SCOPES---------------------------------
 ![monstrum]
 	3ds_reticle_size = 7
-	3ds_shadow_project = 2.9	
+	3ds_shadow_project = 3.7	
 	magnification = 2
 	
 ![acog]
@@ -152,8 +152,8 @@
 	magnification = 2.8	
 
 ![trihawk] 
-	3ds_reticle_size = 10.7
-	3ds_shadow_project = 2.1	
+	3ds_reticle_size = 8
+	3ds_shadow_project = 3.1	
 	magnification = 3
 	
 ![gee36]
@@ -217,11 +217,12 @@
 	3ds_shadow_project = 2.22
 	magnification = 4	
 
-![p4x32]                                        		
+![p4x32] --Not Adjusted                                  		
 	3ds_reticle_size = 7
 	3ds_shadow_project = 3.7
-	magnification = 4	                                       		
-![po4x34]
+	magnification = 4	
+	
+![po4x34] --Not Adjusted 
 	3ds_reticle_size = 7
 	3ds_shadow_project = 3.7
 	magnification = 4	
