--- a/3DSS for GAMMA/gamedata/configs/mod_system_zz_akisg_anim_fix.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zz_akisg_anim_fix.ltx
@@ -1,6 +1,6 @@
 ;No one fixed this shit for 3 years?
 
-![wpn_ak74_isg]wpn_ak74m_sounds
+![wpn_ak74_isg]
 snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
 snd_draw                    = weapons\generic\rifle_draw
 snd_holster                 = weapons\generic\rifle_holster
@@ -27,7 +27,7 @@ anm_idle_sprint         		= wpn_hand_aksu_tact_run
 anm_idle_moving         		= wpn_hand_ak_tact_walk, 1.5
 anm_idle_moving_crouch			= wpn_hand_ak_tact_walk
 anm_shots               		= wpn_hand_ak_tact_shoot, wpn_ak_tact_shoot
-!anm_shots_aim              		= wpn_hand_aksu_tact_run
+anm_shots_aim              		= wpn_hand_aksu_tact_run
 anm_reload              		= wpn_hand_ak_tact_reload, wpn_ak_tact_reload 
 anm_reload_empty        		= wpn_hand_ak_tact_reload_empty, wpn_ak_tact_reload_empty
 anm_idle_aim            		= wpn_hand_ak_tact_idle_aim
