icon sheet adjustments, config adjustments

--- a/3DSS for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
@@ -1,7 +1,6 @@
 ![addons_table]
 devo                                                = scope
 side												= scope
-
 gee36												= scope
 
 ;--------------------------------------------------------------------------------------
@@ -46,3 +45,8 @@ inv_grid_height    = 1
 inv_grid_x         = 0
 inv_grid_y         = 2
 repair_type                                         = scope	
+;--------------------------------------------------------------------------------------
+![cortex]
+icons_texture                                       = ui\ui_icon_athi_scopes
+inv_grid_x         = 0
+inv_grid_y         = 3
